# archivist

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
tests/: CLAUDE.md  conftest.py
tests/core/: test_example.py
