[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archivist"
version = "0.0.1"
description = "Opinionated minimal Python project template."
requires-python = ">=3.12"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/archivist"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "ty",
    "pre-commit",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W", "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "RUF",
    "N",
    "PTH",
    "TID",
    "PL",
]
ignore = [
    "E501",
    "PLR0913",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
root = ["src", "tests"]

[tool.ty.rules]
unresolved-import = "error"
unresolved-reference = "error"
unresolved-attribute = "error"
possibly-missing-attribute = "error"
possibly-unresolved-reference = "error"
invalid-argument-type = "error"
invalid-return-type = "error"
invalid-assignment = "error"
call-non-callable = "error"
missing-argument = "error"
unknown-argument = "error"
no-matching-overload = "error"
unsupported-operator = "error"
not-iterable = "error"
not-subscriptable = "error"
redundant-cast = "warn"
unused-ignore-comment = "warn"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config --cov=archivist --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["src/archivist"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
